--- a/src/info/projects.json
+++ b/src/info/projects.json
@@ -21,7 +21,7 @@
 		"link": "https://beta.app.entrenolibre.com/"
 	},
 	{
-		"name": "Rusti.codes",
+		"name": "rusti.codes",
 		"image": "https://i.ibb.co/1bWgjyk/rusti-codes.png",
 		"alt": "Rusti codes page",
 		"description": "Train yourself daily with the best javascript coding exercises",
